code-server/statefulset.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: codeserver
  name: codeserver
  namespace: develop
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8080
    - port: 443
      name: https
      protocol: TCP
      targetPort: 443
  selector:
    app: codeserver
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: codeserver
  namespace: develop
  labels:
    app: codeserver
spec:
  selector:
    matchLabels:
      app: codeserver
  serviceName: codeserver
  replicas: 1
  volumeClaimTemplates:
  - metadata:
      name: codeserver-pvc
    spec:
      storageClassName: scw-bssd-retain
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      securityContext:
        fsGroup: 1000 
      volumes:
      - name: secret-volume
        secret:
          secretName: ssh-key-secret
      serviceAccountName: code-server
      automountServiceAccountToken: true
      containers:
        - image: golangcode/code-server
          imagePullPolicy: Always
          name: codeserver
          volumeMounts:
            - name: secret-volume
              readOnly: true
              mountPath: "/home/coder/.ssh"
              #subpath: "home/coder/.ssh"
            - name: codeserver-pvc
              mountPath: /home/coder/work
            - name: codeserver-pvc
              mountPath: /home/coder/.local
          ports:
            - containerPort: 8080
